--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "altergemu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -63,6 +63,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
